
typedef struct Chodec {
  int x;
  int y;
} chdc_t;

chdc_t * chodec_init(int hranica_x, int hranica_y);
void chodec_destroy(chdc_t * chodec);

