@startuml

package zdrojove_kody {



    class UI {
      +char * vykresli_svet(svt_t * svet)
      +char * svet_vypis_statistiku(svt_t * svet)
      +char * svet_vypis_kroky(svt_t * svet)
      +char * vrat_menu_klient()
      +char * vycisti_obrazovku()
      +void inicializuj_server(srv_p_t * data, socket_client_t * socket, pipe_data_t * pip_write, _Bool pouziPipe)
      +void spusti_initmenu_klient(socket_client_t * socket, pipe_data_t * pip_write, _Bool pouziPipe)
      +void server_vykonavaj_sim(svt_brd_t * svet, vypis_pipe_t * data_pipe, _Bool pouziPipe)
      +void posli_vsetkym_svet(svt_vp_t * data, vypis_pipe_t * data_pipe, _Bool pouziPipe)
      +void posli_vsetkym_statistiku(svt_brd_t * data, vypis_pipe_t * data_pipe, _Bool pouziPipe)
      +void posli_vsetkym_stat(svt_vp_t * data, vypis_pipe_t * data_pipe, _Bool pouziPipe)
      +int hlavne_menu_klient()
    }

    enum Smer {
      Hore
      Dole
      Vpravo
      Vlavo
    }

    class Pravdepodobnost  <<struct>> {
      +float hore
      +float dole
      +float vpravo
      +float vlavo
    }

    class Svet  <<struct>> {
      +int ** pole
      +float ** pole_pravdepodobnosti
      +float ** pole_priemer_krok
      +chdc_t * chodec
      +int hranica_x
      +int hranica_y
      +int stred_x
      +int stred_y
      +prvd_t pravdepodobnosti
      +int pocet_krokov_K
      +int pocet_krokov_K_origo
      +int pocet_replikacii
      +int original_replikacii
      +char cesta_k_suboru[100]

      
      +void naformatuj_svet_na_poslanie()
    }

    class svet {
      +svt_t * svet_init_normal(int hranica_x, int hranica_y, prvd_t pravdepodobnosti, int pocet_krokov_K, int pocet_replikacii, char * cesta_k_suboru)
      +svt_t * svet_init_prekazky(int hranica_x, int hranica_y, int sanca_na_prekazku, prvd_t pravdepodobnosti, int pocet_krokov_K, int pocet_replikacii, char * cesta_k_suboru)
      +svt_t * svet_nacitaj_zo_suboru(char *cesta_k_suboru)
      +void svet_uloz_do_suboru()
      +_Bool je_svet_ok()
      +void posun_chodca_na(int sur_x, int sur_y)
      +void je_policko_ok(int x, int y, _Bool navstivene[][])
      +void svet_destroy()
      +void posun_chodca(Smer smer_posunu)
      +smer_t daj_nahodny_smer_pre_chodca()
      +svt_t svet_copy()
    }
    class svet_broadcast  <<struct>> {
      +sv_t * svet
      +socket_server_t * server
    }

    class vypis_sveta  <<struct>> {
      +sv_t * svet
      +socket_server_t * server
    }

    class poslat_server  <<struct>>  {
      +int rozmer_x
      +int rozmer_y
      +_Bool svet_s_prekazkami
      +int pocet_replikacii
      +int pocet_krokov_K
      +prvd_t pravdepodobnosti
      +char * cesta_k_suboru
    }

    class pipe_svet_vypis  <<struct>> {
      +svt_t * svet
      +server_pipe_t * server
    }

    class Simulacia {
      +float simuluj_k_stredu_od_policka_statistika(int sur_x, int sur_y, int pocet_pokusov_K, svt_t * svet)
      +void generuj_pravdepodobnost(svt_t * svet)
      +void generuj_priem_krok(svt_t * svet)
      +float daj_priem_krok_policko(int sur_x, int sur_y, svt_t * svet)
    }
    
    class Chodec <<struct>> { 
      +int x
      +int y
    
    }

    class chodec {
      +chdc_t chodec_init(int hranica_x, int hranica_y)
      +void chodec_destroy()
    }
}

'koniec package


package zdielanaPamat {
  class PipeData <<struct>> {
    +char * path
    +int fD
  }

  class pipe {
    +void pipe_init(pipe_data_t * this,char * path, _Bool withCreation)
    +void pipe_destroy(pipe_data_t * this,_Bool withDeletion, _Bool withNameFree)
    +void pipe_open_write(pipe_data_t * this,)
    +void pipe_open_read(pipe_data_t * this,)
    +int pipe_read(pipe_data_t * this, char * result, size_t size)
    +void pipe_write(pipe_data_t * this, const char * data, size_t size)
    +void pipe_close(pipe_data_t * this,)
    +void * nacuvajklientovi_pipe(void * arg)
  }

  class klient_pipe_t <<struct>> {
    +pipe_data_t pip_write
    +pipe_data_t pip_read
    +atomic_bool klien_bezi
  }

  class server_info_pipe <<struct>> {
    +atomic_bool chcem_statistiku
    +atomic_bool vypni_server
    +atomic_bool prepni_mod
    +atomic_bool prazdne
  }


  class server_pipe_t <<struct>> {
    +pipe_data_t pip_write
    +pipe_data_t pip_read
    +atomic_bool server_bezi
    +server_inf_t server_info
  }

}

'koniec pipe package


package sockety {

  class socket {
    +void socket_init(socket_data_t * this, int domain, int type, int protocol)
    +void socket_destroy(socket_data_t * this)
    +_Bool socket_is_valid(socket_data_t * this)
    +void socket_bind(socket_data_t * this, const struct sockaddr * severAddress, socklen_t severAddressLength)
    +void socket_listen(socket_data_t * this, int backlog)
    +_Bool socket_connect(socket_data_t * this, const struct sockaddr * clientAddress, socklen_t clientAddressLength)
    +void socket_write(socket_data_t * this, const char * buffer, size_t length)
    +int socket_read(socket_data_t * this, char * buffer, size_t length)
    +_Bool socket_accept(socket_data_t * this, const socket_data_t * passiveSocket, struct sockaddr * clientAddress, socklen_t * clientAddressLength, socket_server_t * server)
    +void socket_server_init(socket_server_t * this, int port)
    +void socket_server_accept_connection(socket_server_t * this)
    +void socket_server_destroy(socket_server_t * this)
    +void client_zavri(socket_server_t * this)
    +_Bool socket_client_init(socket_client_t * this, char * serverName, char * port)
    +void socket_client_destroy(socket_client_t * this)
    +void socket_posli_klientom_end(socket_client_t * this)
    +void * cisti_server(void * arg)
    +void * nacuvajklientovi(void * arg)
  }


  class SocketData <<struct>> {
    +int socket
  }

  class klient_read <<struct>> {
    +socket_data_t socket_pocuvaj
    +atomic_bool chcem_statistiku
    +atomic_bool bezi_klient
    +atomic_bool vypni_server
    +atomic_bool prepni_mod
  }

  class server_info <<struct>> {
    +atomic_bool sumarny_mod
  }

  class SocketServer <<struct>> {
    +socket_data_t passiveSocket
    +klient_read_t ** klienti
    +int pocetKlinetov
    +int maxPocetKlientov
    +int port
    +pthread_mutex_t mutex
    +atomic_bool server_bezi
    +srv_inf_t server_info
    +int hlavny_klient
    +int dokopyPripojenych
  }


  class SocketClient <<struct>> {
    +socket_data_t activeSocket
    +char * serverName
    +int port
    +atomic_bool klien_bezi
    +pthread_mutex_t mutex
  }


}


'koniec soket package



package server_lib {
  class pomoc_server {
    +svt_t * server_info_subor(socket_server_t * server, server_pipe_t * server_pipe, _Bool pouziPipe)
    +void * vlaknoPrijmaniaSpojenia(void * arg)
    +svt_t * nastav_server(socket_server_t * server, server_pipe_t * server_pipe, _Bool pouziPipe)
  }
}

package klient_lib {
  class pomoc_klient {
    +_Bool je_klient_hlavny(socket_client_t * socket)
    +void * vypisujObraz(void * arg)
    +_Bool nacitaj_zo_suboru(socket_client_t * socket, char * mozno_cesta_subor)
    +int klient_odpovedaj(socket_client_t * socket_client, klient_pipe_t * klient, _Bool pouziPipe)
    +_Bool nacitaj_zo_suboru_pipe(pipe_data_t * pipe_write, char * mozno_cesta_subor)
    +void * vypisujObraz_pipe(void * arg)
  }
}


package server {
  class server {
    +int main()
  }
  class server_pipe {
    +int main()
  }
}

package klient {
  class klient {
    +int main()
  }
}

'spoje
'zdrojove_kody prepoje triedy
Simulacia --> svet
svet --> chodec
UI --> socket
UI --> pipe
UI --> Simulacia
'zdrojove_kody prepoje enumy
chodec --> Chodec
svet --> Svet
svet --> Smer
svet --> Pravdepodobnost
UI --> vypis_sveta
UI --> svet_broadcast
UI --> poslat_server
UI --> pipe_svet_vypis
'zdielanaPamat prepoje enumy
pipe --> PipeData
pipe --> server_info_pipe
pipe --> klient_pipe_t
pipe --> server_pipe_t
'sockety prepoje enumy
socket --> server_info
socket --> SocketData
socket --> klient_read
socket --> SocketServer
socket --> SocketClient
'server_lib prepoje triedy
pomoc_server --> UI
'server prepoje triedy
server --> pomoc_server
server_pipe --> pomoc_server
'pomoc_klient prepoje triedy
pomoc_klient --> pipe
pomoc_klient --> socket
pomoc_klient --> UI
'klient prepoje triedy
klient --> pomoc_klient
'prepoje klient_server
klient --> server
server ..> klient
klient --> server_pipe
server_pipe ..> klient
@enduml